--- a/run_12_vernier_analysis_note/vernier/main/main.tex
+++ b/run_12_vernier_analysis_note/vernier/main/main.tex
@@ -49,3 +49,5 @@
 ../../template_files/gen_main_tex.sh vernier/
 ../../template_files/gen_main_tex.sh vernier/
 ../../template_files/gen_main_tex.sh vernier/
+../../template_files/gen_main_tex.sh vernier/
+../../template_files/gen_main_tex.sh vernier/
