--- a/run_12_vernier_analysis_note/vernier/BeamPositionMonitoring/tables/plannedsteps359711.tex
+++ b/run_12_vernier_analysis_note/vernier/BeamPositionMonitoring/tables/plannedsteps359711.tex
@@ -34,5 +34,5 @@
 \bottomrule
 \end{tabular}
 \caption{ BPM data compared to CAD data for run 359711. Columns are from left to right, we see the CAD planned horizontal beam displacement, the bpm-measured horizontal beam displacement, $||CAD_{x}| - |BPM_{x}||$ (to account for polarity flips in bpm), the CAD planned vertical beam displacement, the bpm-measured beam displacement, $||CAD_{y}| - |BPM_{y}||$, the total beam separation ($\sqrt{BPM_{x}^2+BPM_{y}^2}$) and the difference between the measured total separation and the CAD planned total separation. Nominally, CAD promises to hold one beam fixed, and scan the other beam. Rows are each scan step planned and measured for the run. }
-\label{0xffbafcfc}
+\label{0x7fffdb4d8d78}
 \end{table}
