--- a/run_12_vernier_analysis_note/vernier/main/bib.bib
+++ b/run_12_vernier_analysis_note/vernier/main/bib.bib
@@ -42,8 +42,14 @@
         year = "2013"
 }
 @article{kawallfocus2005,
-	author = "Kawall, D.",
-	title = "How To Measure Absolute Luminosity",
-	journal = "PHENIX Focus Seminar",
-	year = "2005"
+        author = "Kawall, D.",
+        title = "How To Measure Absolute Luminosity",
+        journal = "PHENIX Focus Seminar",
+        year = "2005"
+}
+@article{herr2006lumi,
+        title={Concept of Luminosity},
+        author={Herr, Werner and Muratori, Bruno},
+        year={2006},
+        publisher={Cern}
 }
