added chapters, references

--- a/my_thesis/thesis/thesis.tex
+++ b/my_thesis/thesis/thesis.tex
@@ -32,7 +32,7 @@
 % Declarations for Front Matter
 
 \title{Measurement of the Longtidudianl Single Spin Asymmetry, $A_L$, for Polarized Proton-Proton Collisions in the $W\rightarrow\mu$ decay channel}
-\author{Michael John Beaumier}
+\author{Michael J. Beaumier}
 \degreemonth{August}
 \degreeyear{2016}
 \degree{Doctor of Philosophy}
@@ -77,10 +77,13 @@ Professor John Ellison}
 % \part{First Part}
 
 
-\input{../Chapter1/chapter1} %usually intro
-\input{../Chapter2/chapter2}
-\input{../Chapter3/chapter3}
-\input{../Chapter4/chapter4}
+\input{../Chapter1/Introduction} %usually intro
+\input{../Chapter2/PhysicsBackground}
+\input{../Chapter3/ExperimentalApparatus}
+\input{../Chapter4/SpinAnalysis}
+\input{../Chapter5/VernierAnalysis}
+\input{../Chapter6/DiscussionConclusion}
+
 
 \nocite{*}
 % \singlespacing
