--- a/my_thesis/thesis/thesis.tex
+++ b/my_thesis/thesis/thesis.tex
@@ -77,12 +77,12 @@ Professor John Ellison}
 % \part{First Part}
 
 
-\input{../Chapter1/Introduction} %usually intro
-\input{../Chapter2/PhysicsBackground}
-\input{../Chapter3/ExperimentalApparatus}
-\input{../Chapter4/SpinAnalysis}
-\input{../Chapter5/VernierAnalysis}
-\input{../Chapter6/DiscussionConclusion}
+\input{../Chapter1/01_introduction} %usually intro
+\input{../Chapter2/02_physicsbackground}
+\input{../Chapter3/03_experimentalapparatus}
+\input{../Chapter4/04_spinanalysis}
+\input{../Chapter5/05_vernieranalysis}
+\input{../Chapter6/06_discussionconclusion}
 
 
 \nocite{*}
