--- a/my_thesis/thesis/thesis.tex
+++ b/my_thesis/thesis/thesis.tex
@@ -31,7 +31,7 @@
 
 % Declarations for Front Matter
 
-\title{Measurement of the Longtidudianl Single Spin Asymmetry, $A_L$, for Polarized Proton-Proton Collisions in the $W\rightarrow\mu$ decay channel}
+\title{MEASUREMENT OF THE LONGTIDUDIANL SINGLE SPIN ASYMMETRY, $A_L$, FOR POLARIZED PROTON-PROTON COLLISIONS IN THE $W\rightarrow\mu$ DECAY CHANNEL}
 \author{Michael J. Beaumier}
 \degreemonth{August}
 \degreeyear{2016}
