--- a/my_thesis/thesis/thesis.tex
+++ b/my_thesis/thesis/thesis.tex
@@ -81,12 +81,13 @@ Professor John Ellison}
 \end{frontmatter}
 
 % Thesis Body
-\input{../Chapter1/01_introduction} %usually intro
-\input{../Chapter2/02_physicsbackground}
-\input{../Chapter3/03_experimentalapparatus}
-\input{../Chapter4/04_spinanalysis}
-\input{../Chapter5/05_vernieranalysis}
-\input{../Chapter6/06_discussionconclusion}
+\input{../Chapter1/01_introduction.tex         }
+\input{../Chapter2/02_physicsbackground.tex    }
+\input{../Chapter3/03_experimentalapparatus.tex}
+\input{../Chapter4/04_datacollection.tex       }
+\input{../Chapter5/05_spinanalysis.tex         }
+\input{../Chapter6/06_vernieranalysis.tex      }
+\input{../Chapter7/07_discussionconclusion.tex }
 
 \nocite{*}
 \bibliographystyle{plain}
