--- a/my_thesis/thesis/packages.tex
+++ b/my_thesis/thesis/packages.tex
@@ -5,6 +5,20 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage[figuresright]{rotating}
+\usepackage{hyperref}
+\usepackage{xcolor}
+\hypersetup{
+    colorlinks,
+    linkcolor={red!50!black},
+    citecolor={blue!50!black},
+    urlcolor={blue!80!black},
+    bookmarks=true,
+    pdfpagelabels=true
+    hyperfootnotes=false,
+    hyperindex=true,
+    pageanchor=false,
+    colorlinks,
+}
 
 %% Custom Commands %%
 
