added some stuff on spin anaylsis, bayes

--- a/my_thesis/thesis/bibliography.bib
+++ b/my_thesis/thesis/bibliography.bib
@@ -7,6 +7,11 @@
   pages = "403--422"
 }
 
+@article{collinsnaive,
+  title={The Naive Bayes Model, Maximum-Likelihood Estimation, and the EM Algorithm},
+  author={Collins, Michael}
+}
+
 @article{PhysRevLett.23.930,
   title = {High-Energy Inelastic $e-p$ Scattering},
   author = {Bloom, E. D. and Coward, D. H. and DeStaebler, H. and Drees, J. and Miller, G. and Mo, L. W. and Taylor, R. E. and Breidenbach, M. and Friedman, J. I. and Hartmann, G. C. and Kendall, H. W.},
