some more renaming, minor progress

--- a/my_thesis/thesis/thesis.tex
+++ b/my_thesis/thesis/thesis.tex
@@ -84,7 +84,7 @@ Professor John Ellison}
 \input{../Chapter1/01_introduction.tex         }
 \input{../Chapter2/02_physicsbackground.tex    }
 \input{../Chapter3/03_experimentalapparatus.tex}
-\input{../Chapter4/04_datacleaning.tex         }
+\input{../Chapter4/04_dataset.tex              }
 \input{../Chapter5/05_spinanalysis.tex         }
 \input{../Chapter6/06_vernieranalysis.tex      }
 \input{../Chapter7/07_discussionconclusion.tex }
