added some more intro

--- a/my_thesis/thesis/bibliography.bib
+++ b/my_thesis/thesis/bibliography.bib
@@ -12,6 +12,20 @@
   author={Collins, Michael}
 }
 
+@article{Bass:2004xa,
+  author         = "Bass, Steven D.",
+  title          = "{The Spin structure of the proton}",
+  journal        = "Rev. Mod. Phys.",
+  volume         = "77",
+  year           = "2005",
+  pages          = "1257-1302",
+  doi            = "10.1103/RevModPhys.77.1257",
+  eprint         = "hep-ph/0411005",
+  archivePrefix  = "arXiv",
+  primaryClass   = "hep-ph",
+  SLACcitation   = "%%CITATION = HEP-PH/0411005;%%"
+}
+
 @article{PhysRevLett.23.930,
   title = {High-Energy Inelastic $e-p$ Scattering},
   author = {Bloom, E. D. and Coward, D. H. and DeStaebler, H. and Drees, J. and Miller, G. and Mo, L. W. and Taylor, R. E. and Breidenbach, M. and Friedman, J. I. and Hartmann, G. C. and Kendall, H. W.},
