--- a/my_thesis/thesis/packages.tex
+++ b/my_thesis/thesis/packages.tex
@@ -25,6 +25,13 @@
 % Create an obvious citation placeholder
 \newcommand{\needcite}[0]{\textbf{\textcolor{red}{ [CITATION NEEDED]}}}
 
+% Create an obvious need caption placeholder
+\newcommand{\needcap}[0]{\textbf{\textcolor{red}{[CAPTION NEEDED]}}}
+
+% Create an obvious need figure placeholder
+\newcommand{\needfig}[0]{\textbf{\textcolor{red}{[FIGURE NEEDED]}}}
+
+
 % Generate a sideways table placeholder
 \newcommand{\sidewaystab}[0]
 {
