added some cool history

--- a/my_thesis/thesis/packages.tex
+++ b/my_thesis/thesis/packages.tex
@@ -2,6 +2,7 @@
 \usepackage{tabulary}
 \usepackage{booktabs,multirow,dcolumn,bigdelim}
 \usepackage{float,graphicx}
+\usepackage{subcaption}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage[figuresright]{rotating}
