more figures, etc

--- a/my_thesis/thesis/bibliography.bib
+++ b/my_thesis/thesis/bibliography.bib
@@ -7,6 +7,16 @@
   pages = "403--422"
 }
 
+@book{Halzen1985,
+	author = {Halzen, Francis},
+	booktitle = {Am. J. Phys.},
+	number = {3},
+	pages = {287},
+	title = {{Quarks and Leptons: An Introductory Course in Modern Particle Physics}},
+	volume = {53},
+	year = {1985}
+}
+
 @article{collinsnaive,
   title={The Naive Bayes Model, Maximum-Likelihood Estimation, and the EM Algorithm},
   author={Collins, Michael}
@@ -69,7 +79,7 @@ year = {2014}
 	Year = {2016},
 	Eprint = {arXiv:1603.05884},
 }
-@article{1988PhLB..206..364A,
+@article{1988PhLB206364A,
    author = {{Ashman}, J. and {Badelek}, B. and {Baum}, G. and {Beaufays}, J. and 
   {Bee}, C.~P. and {Benchouk}, C. and {Bird}, I.~G. and {Brown}, S.~C. and 
   {Caputo}, M.~C. and {Cheung}, H.~W.~K. and {Chima}, J. and {Ciborowski}, J. and 
