fixed references and bibliography to take a direct mendeley import

--- a/my_thesis/thesis/thesis.tex
+++ b/my_thesis/thesis/thesis.tex
@@ -91,7 +91,7 @@ Professor John Ellison}
 
 \nocite{*}
 \bibliographystyle{plain}
-\bibliography{bibliography}
+\bibliography{mendeley.bib}
 \input{../Appendix/appendix}
 
 \end{document}
