--- a/my_thesis/Abstract/abstract.tex
+++ b/my_thesis/Abstract/abstract.tex
@@ -2,7 +2,7 @@
 	This thesis discusses the process of extracting information about the spin
 	structure of protons, specifically, spin contributions from the sea of quarks
 	and antiquarks, which are kinematically distinct from the 'valence quarks'.
-	We have known since the 'proton-spin crisis' ~\cite{1988PhLB206364A} of
+	We have known since the 'proton-spin crisis' ~\cite{Ashman1988} of
 	the 1990s that proton spin does not entirely reside in the valence quarks, so
 	the thurst of experimental efforts since then have been designed to determine
 	both how to probe the proton spin structure, and how to validate models for
