--- a/my_thesis/thesis/mendeley.bib
+++ b/my_thesis/thesis/mendeley.bib
@@ -1,3 +1,63 @@
+@article{Gell-Mann1953,
+author = {Gell-Mann, M.},
+doi = {10.1103/PhysRev.92.833},
+file = {:home/mjbeaumier/thesis{\_}reference{\_}papers/gellmann1953.pdf:pdf},
+issn = {0031899X},
+journal = {Phys. Rev.},
+number = {3},
+pages = {833--834},
+title = {{Isotopic spin and new unstable particles}},
+volume = {92},
+year = {1953}
+}
+@article{Gell-Mann1956,
+author = {Gell-Mann, M.},
+doi = {10.1007/BF02748000},
+file = {:home/mjbeaumier/thesis{\_}reference{\_}papers/gellmann1956.pdf:pdf},
+issn = {00296341},
+journal = {Nuovo Cim. Ser. 10},
+number = {1 Supplement},
+pages = {848--866},
+title = {{The interpretation of the new particles as displaced charge multiplets}},
+volume = {4},
+year = {1956}
+}
+@article{Bryant1994,
+author = {Bryant, Pj},
+file = {:home/mjbeaumier/thesis{\_}reference{\_}papers/bryant{\_}particle{\_}history.pdf:pdf},
+journal = {Cern Eur. Organ. {\ldots}},
+keywords = {History,Particle Accelerators},
+title = {{A brief history and review of accelerators}},
+url = {https://cds.cern.ch/record/261062/files/p1{\_}2.pdf},
+year = {1994}
+}
+@article{Yukawa1935,
+author = {Yukawa, H},
+file = {:home/mjbeaumier/thesis{\_}reference{\_}papers/yukawa1935.pdf:pdf},
+number = {Received},
+pages = {1--9},
+title = {{On the Interaction of Elementary Particles}},
+url = {http://web.ihep.su/dbserv/compas/src/yukawa35/eng.pdf},
+year = {1935}
+}
+@article{Heisenberg1952,
+author = {Heisenberg, W},
+file = {:home/mjbeaumier/thesis{\_}reference{\_}papers/heisenberg{\_}nucleon.pdf:pdf},
+pages = {1--17},
+title = {{Production of Mesons as a Shock Wave Problem Visual description of a shock wave}},
+url = {http://web.ihep.su/dbserv/compas/src/heisenberg52/eng.pdf},
+year = {1952}
+}
+@techreport{KraussParticleHistory,
+address = {Durham},
+author = {Krauss, Frank},
+file = {:home/mjbeaumier/Dropbox/physics/thesis{\_}reference{\_}papers/krauss{\_}history{\_}particle{\_}physics.pdf:pdf},
+institution = {Institute for Particle physics Phenomenology, University of Durham},
+keywords = {History,Particle Phyiscs},
+mendeley-tags = {History,Particle Phyiscs},
+title = {{History of Particle Physics}},
+url = {http://www.ippp.dur.ac.uk/{~}krauss/Lectures/IntoToParticlePhysics/History{\_}1.pdf}
+}
 @article{Drees2013,
 abstract = {At RHIC the collision rate per IP is measured by the Zero Degree Calorimeters (ZDC) [1]. Both, STAR and PHENIX, contain those detectors that are of identical design but are equipped with different Photo Multiplier Tubes (PMT) and operated with individually different HV setups and also slightly different read-out electronics. The collision rate, as measured by the ZDC, corresponds to the rate of mutual forward neutral particles above a variable threshold and within a certain coincidence window. Due to the differences in the detector electronics the two devices are calibrated individually every year by the use of vernier scans [2]. During the RHIC polarized proton Run in 2013 a total of 6 vernier scans per experiment were performed. This note presents the data and summarizes the results, i.e. effective ZDC cross section and emittance measurements, from those scans.},
 author = {Drees, A},
@@ -58,6 +118,7 @@ year = {1969}
 abstract = {Harald Fritzsch, one of the pioneers of quantum chromodynamics, recalls some of the background to the development of the theory 40 years ago.},
 author = {Fritzsch, Harold},
 title = {{The history of QCD - CERN Courier}},
+url = {http://cerncourier.com/cws/article/cern/50796},
 urldate = {2016-04-14}
 }
 @book{Halzen1985,
@@ -141,23 +202,6 @@ number = {December},
 title = {{Measurement of the Single Spin Asymmetry in W Boson Production in Polarized p+p collisions at √s =510GeV withthe PHENIX Muon Spectrometer}},
 year = {2012}
 }
-@phdthesis{Oide2012,
-author = {Oide, Hideyuki},
-file = {:home/mjbeaumier/Documents/analysis{\_}papers/my{\_}thesis/thesis/reference{\_}theses/OideThesis.pdf:pdf},
-number = {December},
-title = {{Measurement of longitudinal spin asymmetry in production of muons from W / Z boson decays in polarized p + p collisions at s = 500 GeV with the PHENIX detector at RHIC}},
-year = {2012}
-}
-@phdthesis{Meles2015,
-author = {Meles, Abraham},
-booktitle = {PhD Propos.},
-file = {:home/mjbeaumier/Documents/analysis{\_}papers/my{\_}thesis/thesis/reference{\_}theses/MelesThesis.pdf:pdf},
-keywords = {icle},
-number = {May},
-title = {{Measurement of Longitudinal Single Spin Asymmetry in the Production of Muons from W/Z Boson Decays in Polarized p+p Collisions at √s = 510 GeV with the PHENIX Detector at RHIC}},
-volume = {1},
-year = {2015}
-}
 @phdthesis{Kleinjan2014,
 archivePrefix = {arXiv},
 arxivId = {arXiv:1011.1669v3},
@@ -169,6 +213,23 @@ number = {December},
 title = {{Measurement of the Transverse Single Spin Asymmetry and the Invariant Cross Section of Inclusive Eta Mesons Produced from Transversely Polarized Proton-Proton Collisions at Center of Mass Energy of 200 GeV.}},
 volume = {1},
 year = {2014}
+}
+@phdthesis{Meles2015,
+author = {Meles, Abraham},
+booktitle = {PhD Propos.},
+file = {:home/mjbeaumier/Documents/analysis{\_}papers/my{\_}thesis/thesis/reference{\_}theses/MelesThesis.pdf:pdf},
+keywords = {icle},
+number = {May},
+title = {{Measurement of Longitudinal Single Spin Asymmetry in the Production of Muons from W/Z Boson Decays in Polarized p+p Collisions at √s = 510 GeV with the PHENIX Detector at RHIC}},
+volume = {1},
+year = {2015}
+}
+@phdthesis{Oide2012,
+author = {Oide, Hideyuki},
+file = {:home/mjbeaumier/Documents/analysis{\_}papers/my{\_}thesis/thesis/reference{\_}theses/OideThesis.pdf:pdf},
+number = {December},
+title = {{Measurement of longitudinal spin asymmetry in production of muons from W / Z boson decays in polarized p + p collisions at s = 500 GeV with the PHENIX detector at RHIC}},
+year = {2012}
 }
 @unpublished{AN888Datta2010,
 author = {Datta, Amaresh and Kawall, Dave},
@@ -188,12 +249,6 @@ pages = {1--21},
 title = {{The Naive Bayes Model, Maximum-Likelihood Estimation, and the EM Algorithm}},
 year = {2013}
 }
-@unpublished{Seidl2012,
-author = {Seidl, R and Oide, H and Hollis, R and Sarsour, M},
-file = {:home/mjbeaumier/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Seidl et al. - 2012 - Run 11 W → µ cross section and asymmetry analysis.pdf:pdf},
-title = {{Run 11 W → µ cross section and asymmetry analysis}},
-year = {2012}
-}
 @unpublished{an597Bazilevsky2007,
 author = {Bazilev and Sky, A and Bennett, R and Deshpande, A and Goto, Y and Kawall, D and Seele, J},
 file = {:home/mjbeaumier/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Bazilevsky et al. - 2007 - Absolute luminosity determination using the vernier scan technique Run4 – 6 √ Analysis and preliminary r.pdf:pdf},
@@ -201,4 +256,10 @@ institution = {PHENIX},
 pages = {1--32},
 title = {{Absolute luminosity determination using the vernier scan technique : Run4 – 6 √ Analysis and preliminary results at s = 62 . 4 GeV}},
 year = {2007}
+}
+@unpublished{Seidl2012,
+author = {Seidl, R and Oide, H and Hollis, R and Sarsour, M},
+file = {:home/mjbeaumier/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Seidl et al. - 2012 - Run 11 W → µ cross section and asymmetry analysis.pdf:pdf},
+title = {{Run 11 W → µ cross section and asymmetry analysis}},
+year = {2012}
 }
