changed to makefile

--- a/run_12_vernier_analysis_note/intro/intro.tex
+++ b/run_12_vernier_analysis_note/intro/intro.tex
@@ -46,7 +46,7 @@ Where $\mathcal{L}$ is the luminosity, $f_{bunch}$ is the frequency of each indi
 bunch crossing, $N_{b}, N_{y}$ are the bunch populations for the specific blue and yellow
 beams, resepectively, and $\sigma_{x}, \sigma_{y}$ are the transverse widths both bunches
 in the x and y directions. We assume identical beam bunch distributions for the blue and
-yellow beams ~\cite{an888}, however individual bunches can also be studied - and this
+yellow beams ~\cite{AN888Datta2010}, however individual bunches can also be studied - and this
 analysis is presented in this note. $f_{bunch}$ corresponds to the bunch crossing rate of
 a single specific bunch, and depends on the number of bunches in a specific fill and the
 blue beam clock.
@@ -60,16 +60,16 @@ Previous analysis notes on the vernier analysis are listed below for benefit/cur
 the reader:
 
 \begin{itemize}
-\item AN184~\cite{an184}
-\item AN597~\cite{an597}
-\item AN688~\cite{an688}
-\item AN888~\cite{an888}
+\item AN184~\cite{AN184Belikov2003}
+\item AN597~\cite{an597Bazilevsky2007}
+\item AN688~\cite{an688Bennet2008}
+\item AN888~\cite{AN888Datta2010}
 \end{itemize}
 
 Global vernier scan characteristics are summarized in table
 ~\ref{tab:global_scan_summary}. Each vernier scan is done slightly differently as a
 systematic check - beam scan order is varied, beam energy is varied, scan length and step
-length is varied, and sscanning patterns are varied. We expect that these variations will
+length is varied, and scanning patterns are varied. We expect that these variations will
 not affect our final result.
 
 \input{../intro/tables/global_scan_summary.tex}
