--- a/run_12_vernier_analysis_note/main/main.tex
+++ b/run_12_vernier_analysis_note/main/main.tex
@@ -44,5 +44,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Lists and References
 \backmatter
 \bibliographystyle{amsplain}
-\bibliography{../main/bibliography}
+\bibliography{../main/mendeley.bib}
 \end{document}  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% End Document
