moved to using mendelay library.bib, hardlinked back to my thesis

--- a/run_12_vernier_analysis_note/01_VariablesAndCalculations.tex
+++ b/run_12_vernier_analysis_note/01_VariablesAndCalculations.tex
@@ -1,20 +1,22 @@
 \chapter{Variables and Calculations}
 \label{ch:VariablesAndCalculations}
-Though the process of extracting the variables presented in this chapter can sometimes
-require several steps (or even its own chapter) we present the variables in this chapter
-from a physical standpoint. 
+Though the process of extracting the variables presented in this chapter can
+sometimes require several steps (or even its own chapter) we present the
+variables in this chapter from a physical standpoint. 
 
-These variables characterize the dynamics of the beams intersecting in the PHENIX
-interaction region (IR). Our goal in the vernier analysis is to calculate the effective
-detector cross section for our Beam Beam Counter (BBC) photomultiplier tube detector, as
-well as the RHIC machine luminosity, $\mathcal{L}_{RHIC}$. We must also use a realistic
-model for highly relativistic collisions between two intersecting beams.
+These variables characterize the dynamics of the beams intersecting in the
+PHENIX interaction region (IR). Our goal in the vernier analysis is to
+calculate the effective detector cross section for our Beam Beam Counter (BBC)
+photomultiplier tube detector, as well as the RHIC machine luminosity,
+$\mathcal{L}_{RHIC}$. We must also use a realistic model for highly
+relativistic collisions between two intersecting beams.
 
-The basic equations, models and variables used in the analysis are summarized here; no
-derivations will be provided (but they will be referenced for the interested reader). I
-will go into detail discussing the extraciton of each parameter within relevent chapters.
+The basic equations, models and variables used in the analysis are summarized
+here; no derivations will be provided (but they will be referenced for the
+interested reader). I will go into detail discussing the extraciton of each
+parameter within relevent chapters.
 
-The effective detector cross section~\cite{drees2013} can be expressed as:
+The effective detector cross section~\cite{Drees2013} can be expressed as:
 
 \begin{equation}
 \label{eq:detector_xsec}
