--- a/run_12_vernier_analysis_note/main.tex
+++ b/run_12_vernier_analysis_note/main.tex
@@ -33,5 +33,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Lists and References
 \backmatter
 \bibliographystyle{amsplain}
-\bibliography{./mendeley.bib}
+\bibliography{./library.bib}
 \end{document}  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% End Document
